--- a/about-2.html
+++ b/about-2.html
@@ -49,16 +49,16 @@
         <div class="row-offcanvas row-offcanvas-left">
             <div id="sidebar-fix" class="sidebar-offcanvas">
                 <div class="side-logo clearfix">
-                    <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt=""></a>
+                    <a class="navbar-brand" href="index.html"><img src="images/logo.png" style="width:80%" alt=""></a>
                 </div><!-- end logo -->
                 <ul class="sidebar-nav clearfix">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about-2.html">About Us</a></li>
                     <li><a href="service-2.html">Services</a></li>
-                    <li><a href="projects-2.html">Our Projects</a></li>
-                    <li><a href="shop-2.html">Shopping</a></li>
-                    <li><a href="team.html">Workers</a></li>
-                    <li><a href="blog-5.html">Blog</a></li>
+                    <!-- <li><a href="projects-2.html">Our Projects</a></li> -->
+                    <!-- <li><a href="shop-2.html">Shopping</a></li> -->
+                    <!-- <li><a href="team.html">Workers</a></li> -->
+                    <!-- <li><a href="blog-5.html">Blog</a></li> -->
                     <li><a href="contact-2.html">Get In Touch</a></li>
                 </ul>
                 <div class="social">
@@ -125,9 +125,9 @@
 
                             <div class="tabbed-widget">
                                 <ul class="nav nav-tabs row nopadding">
-                                    <li class="active col-md-4 col-sm-6 col-xs-12 nopadding"><a data-toggle="tab" href="#home">Who We Are</a></li>
-                                    <li class="col-md-4 col-sm-6 col-xs-12 nopadding"><a data-toggle="tab" href="#menu1">What WE Do</a></li>
-                                    <li class="col-md-4 col-sm-6 col-xs-12 nopadding"><a data-toggle="tab" href="#menu2">Our Mission</a></li>
+                                    <li class="active col-md-6 col-sm-6 col-xs-12 nopadding"><a data-toggle="tab" href="#home">Who We Are</a></li>
+                                    <!-- <li class="col-md-4 col-sm-6 col-xs-12 nopadding"><a data-toggle="tab" href="#menu1">What WE Do</a></li> -->
+                                    <li class="col-md-6 col-sm-6 col-xs-12 nopadding"><a data-toggle="tab" href="#menu2">Our Mission</a></li>
                                 </ul>
 
                                 <div class="tab-content row">
@@ -148,14 +148,22 @@
                                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliquaadipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
                                     </div>
                                     <div id="menu2" class="tab-pane fade">
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliquaadipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+                                        <div class="row">
+                                            <div id="videoyoutube" class="col-md-5">
+                                                <iframe width="100%" height="250" src="https://www.youtube.com/embed/8dsIok1rxEE" frameborder="0" allowfullscreen></iframe>
+                                            </div>
+                                            <div class="col-md-7">
+                                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. amet, consectetur adipisicing elit..</p>
+                                                <p>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+                                                <p>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
-                            </div><!-- end tabbed-widget -->
+                            </div>
 
-                    </div><!-- end col -->
-                </div><!-- end row -->
+                    </div>
+                </div>
             </div><!-- end container -->
         </section><!-- end section -->
 
