--- a/contact-2.html
+++ b/contact-2.html
@@ -44,16 +44,16 @@
         <div class="row-offcanvas row-offcanvas-left">
             <div id="sidebar-fix" class="sidebar-offcanvas">
                 <div class="side-logo clearfix">
-                    <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt=""></a>
+                    <a class="navbar-brand" href="index.html"><img src="images/logo.png" style="width:80%" alt=""></a>
                 </div><!-- end logo -->
                 <ul class="sidebar-nav clearfix">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about-2.html">About Us</a></li>
                     <li><a href="service-2.html">Services</a></li>
-                    <li><a href="projects-2.html">Our Projects</a></li>
+                    <!-- <li><a href="projects-2.html">Our Projects</a></li>
                     <li><a href="shop-2.html">Shopping</a></li>
                     <li><a href="team.html">Workers</a></li>
-                    <li><a href="blog-5.html">Blog</a></li>
+                    <li><a href="blog-5.html">Blog</a></li> -->
                     <li><a href="contact-2.html">Get In Touch</a></li>
                 </ul>
                 <div class="social">
@@ -99,11 +99,11 @@
 					<div class="container-full">
 						<div class="title-area row">
 							<div class="col-md-12 text-center">
-								<h2>Appointment</h2>
+								<h2>Get in Touch</h2>
 								<div class="bread">
 									<ol class="breadcrumb">
 										<li><a href="#">Home</a></li>
-										<li class="active">Appointment</li>
+										<li class="active">Get in Touch</li>
 									</ol>
 								</div><!-- end bread -->
 							</div>
@@ -167,8 +167,8 @@
                             <form method="post">
                                 <fieldset class="row-fluid appoform">
                                     <div class="col-md-12">
-                                        <label class="sr-only">Appointment time</label>
-                                        <input id="datepicker" type="text" placeholder="Appointment time" class="form-control">
+                                        <!-- <label class="sr-only">Appointment time</label>
+                                        <input id="datepicker" type="text" placeholder="Appointment time" class="form-control"> -->
 
                                         <label class="sr-only">Your name</label>
                                         <input type="text" placeholder="Your full name *" class="form-control">
