--- a/service-2.html
+++ b/service-2.html
@@ -44,16 +44,16 @@
         <div class="row-offcanvas row-offcanvas-left">
             <div id="sidebar-fix" class="sidebar-offcanvas">
                 <div class="side-logo clearfix">
-                    <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt=""></a>
+                    <a class="navbar-brand" href="index.html"><img src="images/logo.png" style="width:80%" alt=""></a>
                 </div><!-- end logo -->
                 <ul class="sidebar-nav clearfix">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about-2.html">About Us</a></li>
                     <li><a href="service-2.html">Services</a></li>
-                    <li><a href="projects-2.html">Our Projects</a></li>
-                    <li><a href="shop-2.html">Shopping</a></li>
-                    <li><a href="team.html">Workers</a></li>
-                    <li><a href="blog-5.html">Blog</a></li>
+                    <!-- <li><a href="projects-2.html">Our Projects</a></li> -->
+                    <!-- <li><a href="shop-2.html">Shopping</a></li> -->
+                    <!-- <li><a href="team.html">Workers</a></li> -->
+                    <!-- <li><a href="blog-5.html">Blog</a></li> -->
                     <li><a href="contact-2.html">Get In Touch</a></li>
                 </ul>
                 <div class="social">
