--- a/index.html
+++ b/index.html
@@ -356,19 +356,19 @@
                                 <span style="font-size: 400%;" class="fa fa-home"></span>
                                 <!-- <img class="fa fa-search" alt=""> -->
 
-								<strong>House Cleaning</strong> 
+								<strong>Low pressure housewashing</strong>
 								<p>Lorem ipsum dolor sit amet, consectetur elit. Curabitur euismod enim a metus adipiscing aliquam. </p>
 							</div><!-- end col -->
 							<div class="col-md-4 col-sm-6 why-us">
                                 <!-- <img src="upload/icon-2.png" alt=""> -->
-                                <span style="font-size: 400%;" class="fa fa-road"></span>
+                                <span style="font-size: 400%;" class="fa fa-share"></span>
 								<strong>Gutter Cleaning</strong> 
 								<p>Lorem ipsum dolor sit amet, consectetur elit. Curabitur euismod enim a metus adipiscing aliquam. </p>
 							</div><!-- end col -->
 							<div class="col-md-4 col-sm-6 why-us">
                                 <!-- <img src="upload/icon-2.png" alt=""> -->
-                                <span style="font-size: 400%;" class="fa fa-bank"></span>
-								<strong>Roof Cleaning</strong> 
+                                <span style="font-size: 400%;" class="fa fa-group"></span>
+								<strong>Commercial exterior cleaning</strong>
 								<p>Lorem ipsum dolor sit amet, consectetur elit. Curabitur euismod enim a metus adipiscing aliquam. </p>
 							</div><!-- end col -->
 							<!-- <div class="col-md-4 col-sm-6 why-us">
@@ -463,7 +463,7 @@
                              
                         </div><!-- end row -->
                     </div><!-- /container -->
-                </section><!-- end section -->
+                </section><!-- end section --
 		
 		
         
@@ -474,7 +474,7 @@
                     <hr>
                     <p class="lead">Odec adesterc timeam toruatos, eam debitis sententiae examles.Cure sed homerous<br> 
                     alienum.Cu sed homero alienum lobortis</p>
-                </div><!-- end general title -->
+                </div><!-- end general title --
 
                 <div id="owl-shop" class="row module-wrapper shop-layout text-center">
                     <div class="owl-shop-item">
@@ -486,8 +486,8 @@
                                         <a class="st" rel="bookmark" href="shop-checkout.html"><span class="fa fa-shopping-cart"></span></a>
                                         <a class="st" rel="bookmark" href="shop-single.html"><span class="fa fa-link"></span></a>
                                     </div>
-                                </div><!-- end magnifier -->
-                            </div><!-- end entry -->
+                                </div><!-- end magnifier --
+                            </div><!-- end entry --
                             <h4><a href="shop-single.html">Scales</a></h4>
                             <small>$21.00</small>
                             <div class="rating">
@@ -498,8 +498,8 @@
                                 <i class="fa fa-star-o"></i>
                                 <span>(12)</span>
                             </div>
-                        </div><!-- end shop_item -->
-                    </div><!-- end col -->
+                        </div><!-- end shop_item --
+                    </div><!-- end col --
 
                     <div class="owl-shop-item">
                         <div class="shop-item">
@@ -510,8 +510,8 @@
                                         <a class="st" rel="bookmark" href="shop-checkout.html"><span class="fa fa-shopping-cart"></span></a>
                                         <a class="st" rel="bookmark" href="shop-single.html"><span class="fa fa-link"></span></a>
                                     </div>
-                                </div><!-- end magnifier -->
-                            </div><!-- end entry -->
+                                </div><!-- end magnifier --
+                            </div><!-- end entry --
                             <h4><a href="shop-single.html">Nippers</a></h4>
                             <small>$21.00</small>
                             <div class="rating">
@@ -522,8 +522,8 @@
                                 <i class="fa fa-star-o"></i>
                                 <span>(12)</span>
                             </div>
-                        </div><!-- end shop_item -->
-                    </div><!-- end col -->
+                        </div><!-- end shop_item --
+                    </div><!-- end col --
 
                     <div class="owl-shop-item">
                         <div class="shop-item">
@@ -534,8 +534,8 @@
                                         <a class="st" rel="bookmark" href="shop-checkout.html"><span class="fa fa-shopping-cart"></span></a>
                                         <a class="st" rel="bookmark" href="shop-single.html"><span class="fa fa-link"></span></a>
                                     </div>
-                                </div><!-- end magnifier -->
-                            </div><!-- end entry -->
+                                </div><!-- end magnifier --
+                            </div><!-- end entry --
                             <h4><a href="shop-single.html">Paintbrush </a></h4>
                             <small>$21.00</small>
                             <div class="rating">
@@ -546,8 +546,8 @@
                                 <i class="fa fa-star-o"></i>
                                 <span>(12)</span>
                             </div>
-                        </div><!-- end shop_item -->
-                    </div><!-- end col -->
+                        </div><!-- end shop_item --
+                    </div><!-- end col --
 
                     <div class="owl-shop-item">
                         <div class="shop-item">
@@ -558,8 +558,8 @@
                                         <a class="st" rel="bookmark" href="shop-checkout.html"><span class="fa fa-shopping-cart"></span></a>
                                         <a class="st" rel="bookmark" href="shop-single.html"><span class="fa fa-link"></span></a>
                                     </div>
-                                </div><!-- end magnifier -->
-                            </div><!-- end entry -->
+                                </div><!-- end magnifier --
+                            </div><!-- end entry --
                             <h4><a href="shop-single.html">Duct tape</a></h4>
                             <small>$21.00</small>
                             <div class="rating">
@@ -570,11 +570,11 @@
                                 <i class="fa fa-star-o"></i>
                                 <span>(12)</span>
                             </div>
-                        </div><!-- end shop_item -->
-                    </div><!-- end col -->
-                </div><!-- end row -->
-            </div><!-- end container -->
-        </section><!-- end section -->
+                        </div><!-- end shop_item --
+                    </div><!-- end col --
+                </div><!-- end row --
+            </div><!-- end container --
+        </section><!-- end section --
 		<section class="section white">
             <div class="container-full">
                 <div class="general-title text-left">
@@ -582,7 +582,7 @@
                     <hr>
                     <p class="lead">Let's see all our awesome workes with custom style Sed do eiusmod tempor incididunt<br>
                     ut labore et dolore magna aliqua.</p>
-                </div><!-- end general title -->
+                </div><!-- end general title --
 
                 <div class="row text-center">
                     <div class="col-md-3 col-sm-3  wow fadeIn" data-wow-duration="1s" data-wow-delay="0.4s">
@@ -598,10 +598,10 @@
                                     </div>
                                     <h4>Jonny Doe</h4>
                                     <p>Cras dapibus. Vivamus elementum semper  Aenean vulementum semper Aenean vulputate eleifend tellus. </p>
-                                </div><!-- end magnifier -->
-                            </div><!-- end entry -->
-                        </div><!-- end team-member -->
-                    </div><!-- end col -->
+                                </div><!-- end magnifier --
+                            </div><!-- end entry --
+                        </div><!-- end team-member --
+                    </div><!-- end col --
 
                     <div class="col-md-3 col-sm-3  wow fadeIn" data-wow-duration="1s" data-wow-delay="0.6s">
                         <div class="team-member-2">
@@ -616,10 +616,10 @@
                                     </div>
                                     <h4>Adam Doe</h4>
                                     <p>Cras dapibus. Vivamus elementum semper  Aenean vulementum semper Aenean vulputate eleifend tellus. </p>
-                                </div><!-- end magnifier -->
-                            </div><!-- end entry -->
-                        </div><!-- end team-member -->
-                    </div><!-- end col -->
+                                </div><!-- end magnifier --
+                            </div><!-- end entry --
+                        </div><!-- end team-member --
+                    </div><!-- end col --
 
                     <div class="col-md-3 col-sm-3  wow fadeIn" data-wow-duration="1s" data-wow-delay="0.8s">
                         <div class="team-member-2">
@@ -634,10 +634,10 @@
                                     </div>
                                     <h4>Mark Doe</h4>
                                     <p>Cras dapibus. Vivamus elementum semper  Aenean vulementum semper Aenean vulputate eleifend tellus. </p>
-                                </div><!-- end magnifier -->
-                            </div><!-- end entry -->
-                        </div><!-- end team-member -->
-                    </div><!-- end col -->
+                                </div><!-- end magnifier --
+                            </div><!-- end entry --
+                        </div><!-- end team-member --
+                    </div><!-- end col --
 
                     <div class="col-md-3 col-sm-3  wow fadeIn" data-wow-duration="1s" data-wow-delay="1s">
                         <div class="team-member-2">
@@ -652,12 +652,12 @@
                                     </div>
                                     <h4>Anthony Doe</h4>
                                     <p>Cras dapibus. Vivamus elementum semper  Aenean vulementum semper Aenean vulputate eleifend tellus. </p>
-                                </div><!-- end magnifier -->
-                            </div><!-- end entry -->
-                        </div><!-- end team-member -->
-                    </div><!-- end col -->
-                </div><!-- end row -->
-            </div><!-- end container -->
+                                </div><!-- end magnifier --
+                            </div><!-- end entry --
+                        </div><!-- end team-member --
+                    </div><!-- end col --
+                </div><!-- end row --
+            </div><!-- end container --
         </section><!-- end section -->
 		<section class="section darkbg fullscreen paralbackground parallax" style="background-image: url('images/su2.jpg')" data-img-width="1688" data-img-height="1125" data-diff="100">
             <div class="overlay customoverlay"></div>
