--- a/about-2.html
+++ b/about-2.html
@@ -62,38 +62,35 @@
                     <li><a href="contact-2.html">Get In Touch</a></li>
                 </ul>
                 <div class="social">
-                    <a href="#" data-tooltip="tooltip" data-placement="bottom" title="Facebook"><i class="fa fa-facebook"></i></a>              
-                    <a href="#" data-tooltip="tooltip" data-placement="bottom" title="Twitter"><i class="fa fa-twitter"></i></a>
-                    <a href="#" data-tooltip="tooltip" data-placement="bottom" title="Google Plus"><i class="fa fa-google-plus"></i></a>
-                    <a href="#" data-tooltip="tooltip" data-placement="bottom" title="Linkedin"><i class="fa fa-linkedin"></i></a>
-                    <a href="#" data-tooltip="tooltip" data-placement="bottom" title="Pinterest"><i class="fa fa-pinterest"></i></a>
+                    <a href="https://www.facebook.com/sceneryupgrade/?ref=br_rs" data-tooltip="tooltip" data-placement="bottom" title="Facebook"><i class="fa fa-facebook"></i></a>
+                    <a href="https://www.linkedin.com/in/christopher-floyd-77092728/" data-tooltip="tooltip" data-placement="bottom" title="Linkedin"><i class="fa fa-linkedin"></i></a>
+                    <a href="https://www.instagram.com/sceneryupgrade/" data-tooltip="tooltip" data-placement="bottom" title="Instagram"><i class="fa fa-instagram"></i></a>
                 </div>
             </div><!-- end sidebar -->
 
             <div id="main">
 
-        <div class="topbar clearfix">
-            <div class="container-full">
-                <div class="row-fluid">
-                    <div class="col-md-6 text-left">
-                        <div class="social">
-                            <a href="#" data-tooltip="tooltip" data-placement="bottom" title="Facebook"><i class="fa fa-facebook"></i></a>              
-                            <a href="#" data-tooltip="tooltip" data-placement="bottom" title="Twitter"><i class="fa fa-twitter"></i></a>
-                            <a href="#" data-tooltip="tooltip" data-placement="bottom" title="Google Plus"><i class="fa fa-google-plus"></i></a>
-                            <a href="#" data-tooltip="tooltip" data-placement="bottom" title="Linkedin"><i class="fa fa-linkedin"></i></a>
-                            <a href="#" data-tooltip="tooltip" data-placement="bottom" title="Youtube"><i class="fa fa-youtube"></i></a>
-                            <a href="#" data-tooltip="tooltip" data-placement="bottom" title="Pinterest"><i class="fa fa-pinterest"></i></a>
-                        </div><!-- end social -->
-                    </div><!-- end left -->
-                    <div class="col-md-6 text-right">
-                        <p class="callcol">
-                            <strong><i class="fa fa-phone"></i></strong> +90 543 123 45 67 &nbsp;&nbsp;
-                            <strong><i class="fa fa-fax"></i></strong> +90 543 123 45 67
-                        </p>
-                    </div><!-- end left -->
-                </div><!-- end row -->
-            </div><!-- end container -->
-        </div><!-- end topbar -->
+                <div class="visible-md visible-xs visible-sm mobile-menu">
+                    <button type="button" class="btn btn-default btn-sm" data-toggle="offcanvas"><i class="fa fa-bars"></i></button>
+                </div>
+                <div class="topbar clearfix">
+                    <div class="container-full">
+                        <div class="row-fluid">
+                            <div class="col-md-6 text-left">
+                                <div class="social">
+                                    <a href="https://www.facebook.com/sceneryupgrade/?ref=br_rs" data-tooltip="tooltip" data-placement="bottom" title="Facebook"><i class="fa fa-facebook"></i></a>
+                                    <a href="https://www.linkedin.com/in/christopher-floyd-77092728/" data-tooltip="tooltip" data-placement="bottom" title="Linkedin"><i class="fa fa-linkedin"></i></a>
+                                    <a href="https://www.instagram.com/sceneryupgrade/" data-tooltip="tooltip" data-placement="bottom" title="Instagram"><i class="fa fa-instagram"></i></a>
+                                </div><!-- end social -->
+                            </div><!-- end left -->
+                            <div class="col-md-6 text-right">
+                                <p class="callcol">
+                                    <strong><i class="fa fa-phone"></i></strong> 803-404-0188
+                                </p>
+                            </div><!-- end left -->
+                        </div><!-- end row -->
+                    </div><!-- end container -->
+                </div><!-- end topbar -->
 
         <div class="page-title grey">
             <div class="container-full">
