--- a/service-2.html
+++ b/service-2.html
@@ -1200,46 +1200,44 @@
                 </div><!-- end module-wrapper -->
             </div><!-- end container -->
         </section><!-- end section -->
-		<footer class="footer">
-            <div class="container-full">
-                <div class="row module-wrapper">
-                    <div class="col-md-4 col-sm-6 text-center">
-                        <div class="widget">
-                            <div class="widget-title">
-                                <h4>Office Address:</h4>
-                            </div><!-- end widget -->
-							<p>118 Lake Circus, 3rd Lane
-							Dhanmondi Dhaka-1205</p>
-                        </div><!-- end widget -->
-                    </div><!-- end col -->
+                <footer class="footer">
+                    <div class="container-full">
+                        <div class="row module-wrapper">
+                            <div class="col-md-4 col-sm-6 text-center">
+                                <div class="widget">
+                                    <div class="widget-title">
+                                        <h4>Office Address:</h4>
+                                    </div><!-- end widget -->
+                                    <p>213 S Prospect St Columbia 29205</p>
+                                </div><!-- end widget -->
+                            </div><!-- end col -->
 
-                    <div class="col-md-4 col-sm-6 text-center">
-                        <div class="widget">
-                            <div class="widget-title">
-                                <h4>Phone:</h4>
-                            </div>
-                            <p>+88 123 4567</p>
-                        </div><!-- end widget -->
-                    </div><!-- end col -->
+                            <div class="col-md-4 col-sm-6 text-center">
+                                <div class="widget">
+                                    <div class="widget-title">
+                                        <h4>Phone:</h4>
+                                    </div>
+                                    <a href="tel:803-404-0188">+803-404-0188</a>
+                                </div><!-- end widget -->
+                            </div><!-- end col -->
 
-                    <div class="col-md-4 col-sm-6 text-center">
-                        <div class="widget">
-                            <div class="widget-title">
-                                <h4>Email:</h4>
-                            </div>
-                            <p>info@yoursite.com</p>
-                        </div><!-- end widget -->
-                    </div><!-- end col -->
-                </div><!-- end row -->
-            </div>
-        </footer>		
-		<section class="copyright">
+                            <div class="col-md-4 col-sm-6 text-center">
+                                <div class="widget">
+                                    <div class="widget-title">
+                                        <h4>Email:</h4>
+                                    </div>
+                                    <a href="mailto:sceneryupgrade@yahoo.com">sceneryupgrade@yahoo.com</a>
+                                </div><!-- end widget -->
+                            </div><!-- end col -->
+                        </div><!-- end row -->
+                    </div>
+                </footer>
+                <section class="copyright">
 			<div class="container-full">
 				<div class="row">
-					<div class="col-md-12 text-center">
-						<p>© Next Construction 2017 - 2018 by <a href="#" title="Next Theme">Next Theme</a></p>
-						
-					</div>
+                    <div class="col-md-12 text-center">
+                        <p>Proudly developed by <a href="http://www.meltingpotsolutions.co"><img src="images/mps_logo.png" style="width: 10%"></a>
+                    </div>
 				</div><!-- end row -->
 			</div><!-- end container -->
 		</section><!-- end section -->
