--- a/service-2.html
+++ b/service-2.html
@@ -118,19 +118,19 @@
 									<p>Lorem ipsum dolor sit amet, consectetur elit. Curabitur euismod enim a metus adipiscing aliquam. </p>
 								</div><!-- end col -->
 								<div class="col-md-12 col-sm-12 why-us">
-                                    <i class="fa fa-4x fa-home"></i>
+                                    <i class="fa fa-4x fa-life-ring"></i>
 									<strong>Low pressure pool deck cleaning</strong>
 									<p>Lorem ipsum dolor sit amet, consectetur elit. Curabitur euismod enim a metus adipiscing aliquam. </p>
 								</div><!-- end col -->
 
                                 <div class="col-md-12 col-sm-12 why-us">
-                                    <i class="fa fa-4x fa-home"></i>
+                                    <i class="fa fa-4x fa-clone"></i>
                                     <strong>Paever restoration</strong>
                                     <p>Lorem ipsum dolor sit amet, consectetur elit. Curabitur euismod enim a metus adipiscing aliquam. </p>
                                 </div><!-- end col -->
 
                                 <div class="col-md-12 col-sm-12 why-us">
-                                    <i class="fa fa-4x fa-home"></i>
+                                    <i class="fa fa-4x fa-recycle"></i>
                                     <strong>Low pressure wood restoration</strong>
                                     <p>Lorem ipsum dolor sit amet, consectetur elit. Curabitur euismod enim a metus adipiscing aliquam. </p>
                                 </div><!-- end col -->
@@ -152,13 +152,13 @@
 								</div><!-- end col -->
 
                                 <div class="col-md-12 col-sm-12 why-us">
-                                    <i class="fa fa-4x fa-home"></i>
+                                    <i class="fa fa-4x fa-windows"></i>
                                     <strong>Exterio window cleaning</strong>
                                     <p>Lorem ipsum dolor sit amet, consectetur elit. Curabitur euismod enim a metus adipiscing aliquam. </p>
                                 </div><!-- end col -->
 
                                 <div class="col-md-12 col-sm-12 why-us">
-                                    <i class="fa fa-4x fa-home"></i>
+                                    <i class="fa fa-4x fa-eraser"></i>
                                     <strong>Efflorescence removal </strong>
                                     <p>Lorem ipsum dolor sit amet, consectetur elit. Curabitur euismod enim a metus adipiscing aliquam. </p>
                                 </div><!-- end col -->
@@ -166,25 +166,25 @@
 						
 							<div class="col-md-4">
 								<div class="col-md-12 col-sm-12 why-us">
-                                    <i class="fa fa-4x fa-home"></i>
+                                    <i class="fa fa-4x fa-paint-brush"></i>
 									<strong>Vinal siding oxidation restoration</strong>
 									<p>Lorem ipsum dolor sit amet, consectetur elit. Curabitur euismod enim a metus adipiscing aliquam. </p>
 								</div><!-- end col -->
 
 								<div class="col-md-12 col-sm-12 why-us">
-                                    <i class="fa fa-4x fa-home"></i>
+                                    <i class="fa fa-4x fa-pallet"></i>
 									<strong>Low pressure brick cleaning</strong>
 									<p>Lorem ipsum dolor sit amet, consectetur elit. Curabitur euismod enim a metus adipiscing aliquam. </p>
 								</div><!-- end col -->
 
                                 <div class="col-md-12 col-sm-12 why-us">
-                                    <i class="fa fa-4x fa-home"></i>
+                                    <i class="fa fa-4x fa-road"></i>
                                     <strong>Concrete/stone cleaning</strong>
                                     <p>Lorem ipsum dolor sit amet, consectetur elit. Curabitur euismod enim a metus adipiscing aliquam. </p>
                                 </div><!-- end col -->
 
                                 <div class="col-md-12 col-sm-12 why-us">
-                                    <i class="fa fa-4x fa-home"></i>
+                                    <i class="fa fa-4x fa-cut"></i>
                                     <strong>Lawn care maintenance</strong>
                                     <p>Lorem ipsum dolor sit amet, consectetur elit. Curabitur euismod enim a metus adipiscing aliquam. </p>
                                 </div><!-- end col -->
