--- a/about-2.html
+++ b/about-2.html
@@ -206,7 +206,7 @@
                 <div class="row service-style-2 text-center">
                     <div class="col-md-3 col-sm-6 bgcolor1">
                         <div class="services-1 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.4s">
-                            <img src="images/icons/mini_icon_01.png" alt="">
+                            <img src="images/clean-machine.png" alt="" style="width: 110px">
                             <h4>excavation truck</h4>
                             <p>Odec adesterc timeam toruatos, eam debitis sententiae examles.Cure sed homerous alienum.Cu sed homero alienum lobortis</p>
                         </div><!-- end custom-module -->
