--- a/index.html
+++ b/index.html
@@ -358,13 +358,13 @@
 							</div><!-- end col -->
 							<div class="col-md-4 col-sm-6 why-us">
                                 <!-- <img src="upload/icon-2.png" alt=""> -->
-                                <span style="font-size: 400%;" class="fa fa-share"></span>
+                                <span style="font-size: 400%;" class="fa fa-home"></span>
 								<strong>Gutter Cleaning</strong> 
 								<p>Lorem ipsum dolor sit amet, consectetur elit. Curabitur euismod enim a metus adipiscing aliquam. </p>
 							</div><!-- end col -->
 							<div class="col-md-4 col-sm-6 why-us">
                                 <!-- <img src="upload/icon-2.png" alt=""> -->
-                                <span style="font-size: 400%;" class="fa fa-group"></span>
+                                <span style="font-size: 400%;" class="fa fa-home"></span>
 								<strong>Commercial exterior cleaning</strong>
 								<p>Lorem ipsum dolor sit amet, consectetur elit. Curabitur euismod enim a metus adipiscing aliquam. </p>
 							</div><!-- end col -->
