--- a/service-2.html
+++ b/service-2.html
@@ -27,6 +27,10 @@
     <link rel="stylesheet" type="text/css" href="css/testimonial.css">
     <link rel="stylesheet" type="text/css" href="style.css">
 
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+
+
+
     <!-- COLORS -->
     <link rel="stylesheet" type="text/css" href="css/custom.css">
 
@@ -172,7 +176,7 @@
 								</div><!-- end col -->
 
 								<div class="col-md-12 col-sm-12 why-us">
-                                    <i class="fa fa-4x fa-pallet"></i>
+                                    <i class="fa fa-4x fa-building"></i>
 									<strong>Low pressure brick cleaning</strong>
 									<p>Lorem ipsum dolor sit amet, consectetur elit. Curabitur euismod enim a metus adipiscing aliquam. </p>
 								</div><!-- end col -->
